deleted unused package.json

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/jpeg" href="/fav/favi.jpg" /> -->
+    <link rel="icon" type="image/jpeg/png" href="/ZTO_LOG_FINAL.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Worker 360</title>
+    <title>ZTO web 3</title>
   </head>
   <body>
     <div id="root"></div>
